--- a/index-blue-particle-animation.html
+++ b/index-blue-particle-animation.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Cryptoking is Professional Creative Template" />
     <!-- SITE TITLE -->
-    <title>Cryptoking - Bitcoin & ICO Cryptocurrency Landing Page HTML Template</title>
+    <title>Охранная система</title>
     <!-- Favicon Icon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
     <!-- Animation CSS -->
