--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     	<br>
                         <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s" style="padding-left: 130px; padding-top: 50px;">Электрическая схема</span>
                         <br>
-                        <a href="assets/images/Электрическая.png"><img src="assets/images/электрическая.png" style="margin: 10px; padding: 10px, 50px; width: 150%; height: 150%"></a>
+                        <a href="assets/images/electric.png"><img src="assets/images/electric.png" style="margin: 10px; padding: 10px, 50px; width: 150%; height: 150%"></a>
                     </div>
     </section>
     <!-- END SECTION TOKEN -->
